# cortex-resource-manager

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RESOURCE_ALLOCATION.md  RESOURCE_ALLOCATION_COMPLETE.txt  SETUP_SUMMARY.md  WORKER_MANAGEMENT.md  docker-compose.yaml  example_usage.py  example_worker_usage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  validate.py  validate_implementation.py  verify_worker_implementation.py
config/: example-mcp-deployment.yaml  worker-config.yaml
examples/: allocation_example.py
src/: allocation_manager.py  server.py  worker_manager.py
src/resource_manager_mcp_server/: __init__.py  __main__.py
tests/: conftest.py  test_allocation_manager.py  test_lifecycle.py  test_lifecycle_manager.py  test_worker_manager.py
