[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-resource-manager"
version = "0.1.0"
description = "MCP server for managing MCP servers and Kubernetes workers in cortex"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Cortex Team" }
]
keywords = ["mcp", "kubernetes", "resource-management", "cortex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.9.4",
    "httpx>=0.27.0",
    "kubernetes>=30.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/ry-ops/cortex-resource-manager"
Repository = "https://github.com/ry-ops/cortex-resource-manager"

[project.scripts]
cortex-resource-manager = "resource_manager_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/resource_manager_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=resource_manager_mcp_server",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["resource_manager_mcp_server"]
